[package]
name = "woomer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
raylib = { version = "5.0.1", features = ["wayland", "opengl_33"] }

[target.'cfg(target_os = "windows")'.dependencies]
win-screenshot = "4.0.10"
[target.'cfg(target_os = "linux")'.dependencies]
libwayshot = { git = "https://github.com/waycrate/wayshot", branch = "freeze-feat-andreas" }
rxscreen = "0.1.7"

[features]
dev = []